--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# OpenWeatherMap API Key
+weather_api_key = "a553880342cfcf4bac76084ebbd7eb7d"
+
+# Google API Key
+g_key = "AIzaSyDggSDa5pjk6ZhHC6oItfObzJf8RaVyQ7E"
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
