--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
-# OpenWeatherMap API Key
-weather_api_key = "a553880342cfcf4bac76084ebbd7eb7d"
+api keys
+_pycache_
 
-# Google API Key
-g_key = "AIzaSyDggSDa5pjk6ZhHC6oItfObzJf8RaVyQ7E"
 
 
 # Byte-compiled / optimized / DLL files
